--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-    <artifactId>org.example</artifactId>
-
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>Lection</groupId>
+    <artifactId>org.example</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <selenium-java.version>4.19.1</selenium-java.version>
+        <webdrivermanager.version>5.8.0</webdrivermanager.version>
+        <junit5.version>5.10.2</junit5.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -26,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
+            <artifactId>selenium-java</artifactId>
             <version>4.22.0</version>
         </dependency>
         <dependency>
@@ -61,6 +67,11 @@
             <version>5.11.0-M2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chromium-driver</artifactId>
+            <version>4.22.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
 </project>
